fix deprecated clz.newInstance()
clz.newInstance() -> clz.getDeclaredConstructor().newInstance()